--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         A long time ago, in a galaxy far,<br> far away....
       </section>
       <section class="logo">
-        <img src="index.svg"> 
+        <img src="index.svg" height="200px" width="200px"> 
     </section>
     <div id="board">  
         <div id="content">
